--- a/www.hlidacshopu.cz/src/html/media/index.html
+++ b/www.hlidacshopu.cz/src/html/media/index.html
@@ -23,7 +23,7 @@
               Po loňské úspěšné analýze slev v&nbsp;rámci Black Friday jsme se opět
               rozhodli podívat na to, jak největší české e-shopy pracují s&nbsp;tímto
               fenoménem. Hlavně nás zajímalo, zda stále čarují se slevami, převážně
-              pomocí umělého navyšování původních cen&nbsp;…
+              pomocí umělého navyšování původních cen…
             </div>
           </div>
         </div>
@@ -43,7 +43,7 @@
               Po loňské úspěšné analýze slev v&nbsp;rámci Black Friday jsme se opět
               rozhodli podívat na to, jak největší české e-shopy pracují s&nbsp;tímto
               fenoménem. Hlavně nás zajímalo, zda stále čarují se slevami, převážně
-              pomocí umělého navyšování původních cen&nbsp;…
+              pomocí umělého navyšování původních cen…
             </div>
           </div>
         </div>
@@ -63,7 +63,7 @@
               Po loňské úspěšné analýze slev v&nbsp;rámci Black Friday jsme se opět
               rozhodli podívat na to, jak největší české e-shopy pracují s&nbsp;tímto
               fenoménem. Hlavně nás zajímalo, zda stále čarují se slevami, převážně
-              pomocí umělého navyšování původních cen&nbsp;…
+              pomocí umělého navyšování původních cen…
             </div>
           </div>
         </div>
@@ -82,7 +82,7 @@
               Po loňské úspěšné analýze slev v&nbsp;rámci Black Friday jsme se opět
               rozhodli podívat na to, jak největší české e-shopy pracují s&nbsp;tímto
               fenoménem. Hlavně nás zajímalo, zda stále čarují se slevami, převážně
-              pomocí umělého navyšování původních cen&nbsp;…
+              pomocí umělého navyšování původních cen…
             </div>
           </div>
         </div>
@@ -94,7 +94,7 @@
             class="media-press-grid__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
             <h3>Black Friday po česku: kouzla se slevami po roce</h3>
             <p class="media__date">10. prosince 2019</p>
-            <div class="media__description">Po loňské úspěšné analýze slev v&nbsp;rámci Black Friday jsme se opět&nbsp;…
+            <div class="media__description">Po loňské úspěšné analýze slev v&nbsp;rámci Black Friday jsme se opět…
             </div>
           </div>
           <div
@@ -102,7 +102,7 @@
             <h3>Black Friday po česku: kouzla se slevami po roce</h3>
             <p class="media__date">10. prosince 2019</p>
             <div class="media__description">
-              Po loňské úspěšné analýze slev v&nbsp;rámci Black Friday jsme se opět&nbsp;…
+              Po loňské úspěšné analýze slev v&nbsp;rámci Black Friday jsme se opět…
             </div>
           </div>
           <div
@@ -110,7 +110,7 @@
             <h3>Black Friday po česku: kouzla se slevami po roce</h3>
             <p class="media__date">10. prosince 2019</p>
             <div class="media__description">
-              Po loňské úspěšné analýze slev v&nbsp;rámci Black Friday jsme se opět&nbsp;…
+              Po loňské úspěšné analýze slev v&nbsp;rámci Black Friday jsme se opět…
             </div>
           </div>
         </div>
@@ -139,7 +139,7 @@
               Po loňské úspěšné analýze slev v&nbsp;rámci Black Friday jsme se opět
               rozhodli podívat na to, jak největší české e-shopy pracují s&nbsp;tímto
               fenoménem. Hlavně nás zajímalo, zda stále čarují se slevami, převážně
-              pomocí umělého navyšování původních cen&nbsp;…
+              pomocí umělého navyšování původních cen…
             </div>
           </div>
         </div>
