[www.hlidacshopu.cz] Modal with data

--- a/www.hlidacshopu.cz/src/html/media/index.html
+++ b/www.hlidacshopu.cz/src/html/media/index.html
@@ -1,6 +1,10 @@
 {% extends 'layouts/master.html' %}
 {% block title %}Hlídač shopů v médiích{% endblock %}
 
+{% block styles %}
+<link rel="stylesheet" href="/stylesheets/media.css">
+{% endblock %}
+
 {% block main %}
 <article class="media">
   <div class="mdc-layout-grid">
