[www.hlidacshopu.cz] Fixed broken images

--- a/www.hlidacshopu.cz/src/html/proc-to-delame/index.html
+++ b/www.hlidacshopu.cz/src/html/proc-to-delame/index.html
@@ -161,7 +161,11 @@
           společný projekt, na kterém aktuálně spolupracuje Apify, TopMonks a
           Keboola.</p>
         <img alt="Hlídač Shopů - Ukázka"
-             src="https://res.cloudinary.com/topmonks/image/upload/v1572294927/www.hlidacshopu.cz/porovnani.svg">
+             src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto/v1572499143/www.hlidacshopu.cz/porovnani-cen.png"
+             srcset="https://res.cloudinary.com/topmonks/image/upload/dpr_1,q_auto,f_auto/v1572499143/www.hlidacshopu.cz/porovnani-cen.png 1x,
+                     https://res.cloudinary.com/topmonks/image/upload/dpr_1.5,q_auto,f_auto/v1572499143/www.hlidacshopu.cz/porovnani-cen.png 1.5x,
+                     https://res.cloudinary.com/topmonks/image/upload/dpr_2,q_auto,f_auto/v1572499143/www.hlidacshopu.cz/porovnani-cen.png 2x"
+             width="100%">
       </div>
     </div>
   </div>
